--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -426,6 +426,7 @@
 
 .userEditInfoBox {
     margin-left: 16px;
+    margin-right: 16px;
     margin-top: 20px;
     margin-bottom: 24px;
 
@@ -447,6 +448,11 @@
     display: flex;
     flex-direction: column;
 
+    input {
+        width: 100%;
+        height: 36px;
+    }
+
     @media (min-width: 768px) {
         flex-direction: row;
     }
@@ -466,11 +472,11 @@
 
 .userEditInfoBox .displayNameInput {
     height: 36px;
-    width: inherit;
+    width: 100%;
     margin-bottom: 24px;
 
     @media (min-width: 768px) {
-        margin-bottom: 40px;
+        margin-bottom: 16px;
     }
 }
 
@@ -481,7 +487,7 @@
 
     @media (min-width: 768px) {
         flex-direction: row;
-        margin-bottom: 58px;
+        margin-bottom: 16px;
     }
 }
 
